[package]
name = "layerstack_conformance"
description = "Conformance harness and golden tests for the layerstack crate."
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["composition", "usd", "conformance", "tests"]
categories = ["development-tools::testing"]

[lints]
workspace = true

[dependencies]
layerstack = { path = "../layerstack" }
layerstack_usda = { path = "../layerstack_usda" }
layerstack_usdc = { path = "../layerstack_usdc" }
layerstack_usdz = { path = "../layerstack_usdz" }
serde = { features = ["derive"], version = "1.0" }
serde_json = "1.0"
