[package]
name = "layerstack_usdz"
description = "USDZ (packaged scene) reader for layerstack — §16.4 compliant."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "../README.md"
keywords = ["usd", "usdz", "package", "scene-description"]
categories = ["parser-implementations"]

[features]
default = []
std = []

[dependencies]
layerstack = { path = "../layerstack" }
layerstack_usda = { path = "../layerstack_usda" }
layerstack_usdc = { path = "../layerstack_usdc" }

[dev-dependencies]

[lints]
workspace = true
